k8s/diap-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: diap
  labels:
    name: diap
    environment: production
