k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: iamerican
  labels:
    name: iamerican
    app: ecommerce
